<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.alphamedia.rutilahu.DetailActivity"
        android:orientation="vertical" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoPenerima"
                android:layout_height="60dip"
                android:layout_width="60dip"
                android:padding="5dp"
                android:layout_marginLeft="5dip"
                android:layout_gravity="left"
                android:src="@drawable/ic_person_outline_black_24dp"
                android:contentDescription="@string/fotoPenerima" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/fotoPenerima"
                android:text="@string/namalengkap"/>

            <EditText
                android:id="@+id/namalengkap"
                android:inputType="text"
                android:layout_alignBaseline="@id/fotoPenerima"
                android:layout_width='fill_parent'
                android:layout_height='wrap_content' />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tgl_lahir"
                android:text="@string/tgl_lahir"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jk"
                android:layout_alignBaseline="@id/tgl_lahir"
                android:layout_alignParentRight="true"
                android:text="@string/jk"/>
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_login"
                android:id="@+id/btn_simpan"
                android:onClick="btnSimpan" />

            <Button
                android:text="@string/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_back"
                android:onClick="btnBack" />

        </LinearLayout>

</LinearLayout>